import("//base/build/ave.gni")

group("media") {
  deps = [
    #"audio",
    "codec",
    "foundation",
    "modules/mpeg2ts",
  ]
  if (is_android) {
    deps += [ "android" ]
  }
}

ave_executable("media_unittests") {
  testonly = true
  deps = [
    "codec/test:codec_unittest_sources",
    "foundation:unittest_sources",
    "//test:test_main",
    "//test:test_support",
  ]
}
