import("//base/build/ave.gni")

group("codec") {
  deps = [
    "ffmpeg:ffmpeg_codec_example",
    "tools:ave_decode",
    "tools:ave_encode",
  ]
}

ave_library("audio_codec_properity") {
  sources = [
    "audio_codec_properity.cc",
    "audio_codec_properity.h",
  ]
}

ave_library("codec_id") {
  sources = [
    "codec_id.cc",
    "codec_id.h",
  ]
  deps = [ "../foundation:media_defs" ]
}

ave_library("codec_buffer") {
  sources = [
    "codec_buffer.cc",
    "codec_buffer.h",
  ]
  deps = [ "../foundation:media_buffer" ]
}

ave_library("codec_interface") {
  sources = [
    "./codec.h",
    "./codec_factory.h",
  ]
}

ave_library("codec_factory") {
  sources = [
    "codec_factory.cc",
    "codec_factory.h",
  ]
  deps = [
    ":codec_id",
    ":codec_interface",
    "ffmpeg:ffmpeg_codec_example",
    "//base:utils",
  ]
}

ave_library("software_codec_factory") {
  sources = [
    "software_codec_factory.cc",
    "software_codec_factory.h",
  ]
  deps = [
    ":codec_interface",
    "ffmpeg:ffmpeg_codec",
    "//base:utils",
  ]
}

ave_library("hardware_codec_factory") {
  sources = [
    "hardware_codec_factory.cc",
    "hardware_codec_factory.h",
  ]
  deps = [
    ":codec_interface",
    "//base:utils",
  ]
}

ave_library("default_codec_factory") {
  sources = [
    "default_codec_factory.cc",
    "default_codec_factory.h",
  ]
  deps = [
    ":codec_interface",
    ":hardware_codec_factory",
    ":software_codec_factory",
    "//base:utils",
  ]
}

ave_library("simple_codec") {
  sources = [
    "simple_codec.cc",
    "simple_codec.h",
  ]
  deps = [
    ":codec_buffer",
    ":codec_interface",
    "../foundation:media_meta",
    "//base:task_util",
    "//base:utils",
  ]
}

ave_library("simple_passthrough_codec") {
  sources = [
    "simple_passthrough_codec.cc",
    "simple_passthrough_codec.h",
  ]
  deps = [
    ":codec_buffer",
    ":simple_codec",
    "../foundation:media_meta",
    "//base:logging",
    "//base:utils",
  ]
}
