import("//base/build/ave.gni")

ave_library("ffmpeg_codec") {
  sources = [
    "ffmpeg_codec.cc",
    "ffmpeg_codec.h",
    "ffmpeg_codec_factory.cc",
    "ffmpeg_codec_factory.h",
  ]
  deps = [
    "../../modules/ffmpeg:ffmpeg_utils",
    "//base:logging",
    "//base:task_util",
    "//base:timeutils",
    "//media/codec:codec_buffer",
    "//media/codec:codec_interface",
    "//media/codec:simple_codec",
    "//third_party/ffmpeg",
  ]
}

ave_executable("ffmpeg_codec_example") {
  sources = [ "ffmpeg_codec_example.cc" ]
  deps = [
    ":ffmpeg_codec",
    "//base:attributes",
    "//base:logging",
    "//media/audio:audio_channel_layout",
    "//media/foundation:media_meta",
    "//third_party/ffmpeg",
  ]
}
