import("//base/build/ave.gni")

ave_library("dummy_codec") {
  sources = [
    "dummy_codec.cc",
    "dummy_codec.h",
    "dummy_codec_factory.cc",
    "dummy_codec_factory.h",
  ]
  deps = [ "//media/codec:codec_interface" ]
}

ave_library("test_codec_support") {
  sources = [
    "./test_codec_helper.cc",
    "./test_codec_helper.h",
  ]
  deps = [
    "//base:logging",
    "//base:task_util",
    "//media/audio:audio_channel_layout",
    "//media/foundation:media_format",
  ]
}

ave_executable("test_decode") {
  sources = [ "test_decode.cc" ]
  deps = [
    ":dummy_codec",
    ":test_codec_support",
  ]

  if (enable_ffmpeg_codec) {
    deps += [ "//media/codec/ffmpeg:ffmpeg_codec" ]
  }
}
