import("//base/build/ave.gni")

ave_library("dummy_codec") {
  sources = [
    "dummy_codec.cc",
    "dummy_codec.h",
    "dummy_codec_factory.cc",
    "dummy_codec_factory.h",
  ]
  deps = [ "//media/codec:codec_interface" ]
}

ave_library("test_codec_support") {
  sources = [
    "./test_codec_helper.cc",
    "./test_codec_helper.h",
  ]
  deps = [
    "//base:logging",
    "//base:task_util",
    "//media/audio:audio_channel_layout",
    "//media/foundation:media_meta",
  ]
}

ave_library("codec_unittest_sources") {
  testonly = true
  sources = [
    "codec_buffer_unittest.cc",
    "codec_id_unittest.cc",
    "dummy_codec_unittest.cc",
    "simple_passthrough_codec_unittest.cc",
  ]
  deps = [
    ":dummy_codec",
    "//media/codec:codec_buffer",
    "//media/codec:codec_id",
    "//media/codec:simple_passthrough_codec",
    "//media/foundation:media_meta",
    "//test:test_support",
  ]
}

ave_executable("test_decode") {
  sources = [ "test_decode.cc" ]
  deps = [
    ":dummy_codec",
    ":test_codec_support",
  ]

  if (enable_ffmpeg_codec) {
    deps += [ "//media/codec/ffmpeg:ffmpeg_codec" ]
  }
}
