import("//base/build/ave.gni")

group("test") {
  testonly = true
  deps = [ ":looper_test" ]
}

executable("looper_test") {
  visibility = [ "*" ]
  testonly = true
  sources = [ "looper_test.cpp" ]

  deps = [
    "..:foundation",
    "//test:test_support",
  ]
}

ave_source_set("media_utils_test") {
  testonly = true
  sources = [ "media_utils_unittest.cc" ]
  deps = [
    "..:media_utils",
    "//test:test_support",
  ]
}

ave_source_set("media_packet_test") {
  testonly = true
  sources = [ "media_packet_unittest.cc" ]
  deps = [
    "..:media_packet",
    "//test:test_support",
  ]
}

ave_source_set("media_frame_test") {
  testonly = true
  sources = [ "media_frame_unittest.cc" ]
  deps = [
    "..:media_frame",
    "//test:test_support",
  ]
}

ave_source_set("media_meta_test") {
  testonly = true
  sources = [ "media_meta_unittest.cc" ]
  deps = [
    "..:media_meta",
    "//test:test_support",
  ]
}

ave_source_set("media_clock_test") {
  testonly = true
  sources = [ "media_clock_test.cc" ]
  deps = [
    "..:media_clock",
    "//test:test_support",
  ]
}
